frame/support/test/tests/pallet_ui/trait_item_duplicate_constant_attr.stderr
error: Duplicate #[pallet::constant] attribute not allowed.
 --> tests/pallet_ui/trait_item_duplicate_constant_attr.rs:9:4
  |
9 |         #[pallet::constant]
  |          ^^^^^^^^^^^^^^^^^^
